# Skeleton_Based_ARAP

./: .gitignore  ARAP.cpp  ARAP.h  CMakeLists.txt  HandlePoint.h  InterfaceManager.cpp  InterfaceManager.h  Mesh.cpp  Mesh.h  README.md  main.cpp
AnimalUI/: DisplayMesh.h  Makefile  animalSkeleton.cpp  animalSkeleton.h  animalUI.cpp  defmesh.cpp  defmesh.h  filter.cpp  filter.h  motion.cpp  motion.h  processor.cpp  processor.h
AnimalUI/data/: pinocchino_skeleton.txt  test_skeleton.txt
Libs/Eigen/share/pkgconfig/: eigen3.pc
Libs/Pinocchio/: Pinocchio.cpp  quaddisttree.h  rect.h  skeleton.cpp  skeleton.h  vector.h
mesh/: bear_limbs_connected.off  bear_original.off  bear_original_shrinked.off  bear_surface.off  pinocchino_match.txt  pinocchino_skeleton.txt  pseudo_mesh.off  pseudo_mesh_1.off  pseudo_mesh_2.off  pseudo_mesh_3.off  skeleton.out
